<resources>
    <string name="app_name">Planer</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="i_already_have_an_account">I already have an account "LOGIN"</string>
    <string name="home_page">Home page</string>
    <string name="logout">Logout</string>
    <string name="create_an_account">Create an account</string>
    <string name="restart_your_password">Restart your password</string>
    <string name="restart_password">Restart password</string>
    <string name="i_remember_password">I remember password</string>
</resources>